# CMakeList.txt : CMake project for sem4_Assignment1_comp, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("sem4_Assignment1_comp")

# Add source to this project's executable.
add_executable (sem4_Assignment1_comp  "sem4_Assignment1_comp.h" "buffer.h" "testBuffer.c")

# TODO: Add tests and install targets if needed.
